--- a/Banco/.settings/org.eclipse.wst.common.component
+++ b/Banco/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+        
     <wb-module deploy-name="Banco">
+                
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <dependent-module archiveName="BancoModel.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/BancoModel/BancoModel">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+                
         <property name="context-root" value="Banco"/>
+                
         <property name="java-output-path" value="/Banco/build/classes"/>
+            
     </wb-module>
+    
 </project-modules>
